--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-# Core ML
+# Core ML Framework
 torch>=2.0.0
 lightning>=2.0.0
 
-# Data
+# Data Processing
 pandas>=2.0.0
 numpy>=1.24.0
 scikit-learn>=1.3.0
@@ -11,10 +11,12 @@ scikit-learn>=1.3.0
 alpaca-py>=0.21.0
 python-dotenv>=1.0.0
 
-# API
+# HTTP Requests (for QuantConnect upload)
 requests>=2.31.0
 
-# Visualization
+# Visualization & Logging
 matplotlib>=3.7.0
 tensorboard>=2.20.0
 
+# Cloud Training (optional - only needed for Lightning AI cloud)
+lightning-app>=2.0.0
